A mass of experimental changes to include two new interleaving methods, testing and benchmarking sub-components of their design.